# openapi-rs

./: .env.example  .gitignore  Cargo.toml  README.md
examples/zone-list/: Cargo.toml
examples/zone-list/src/: main.rs
openapi/: Cargo.toml
openapi-common/: Cargo.toml
openapi-common/src/: client.rs  config.rs  define.rs  lib.rs  request.rs  signer.rs
openapi-common/src/client/: config.rs  request.rs  signer.rs
openapi-common/src/define/: define.rs  request.rs  response.rs
openapi-isync/: Cargo.toml
openapi-macros/: Cargo.toml
openapi-macros/src/: lib.rs
openapi-model/: Cargo.toml
openapi-model/src/: lib.rs  zone.rs
openapi-model/src/job/: job.rs
openapi-rs/: Cargo.toml
openapi-rs/src/api_v1/job/: job_list.rs
openapi-rs/src/api_v1/storage/: remove.rs  upload.rs
openapi-tool/: Cargo.toml
openapi-util/: Cargo.toml
openapi-util/src/: lib.rs  time.rs
openapi-util/src/encrypt/: md5.rs
openapi-util/src/time/: time.rs
openapi/src/: lib.rs
openapi/src/api_v1/: job.rs  storage.rs
openapi/src/api_v1/job/: admin.rs  job_get.rs  job_list.rs  zone_list.rs
openapi/src/api_v1/job/admin/: job_get.rs
openapi/src/api_v1/storage/: download.rs  move.rs  upload.rs
src/: callback.rs  common.rs  lib.rs  main.rs  model.rs  openapi.rs
src/api/: v1.rs
src/api/v1/: job.rs  merch.rs  rdp_go.rs  storage.rs  sync.rs
src/api/v1/job/: admin_job_get.rs  any_zone_list.rs  api_job_get.rs  api_job_list.rs  job_get.rs  job_list.rs  zone_list.rs
src/api/v1/merch/: internal_merch_merchandise_delete.rs  internal_merch_merchandise_get.rs  internal_merch_merchandise_list.rs  internal_merch_merchandise_patch.rs  internal_merch_merchandise_post.rs  internal_merch_merchandise_publish.rs  internal_merch_merchandise_unpublish.rs  internal_merch_order_list.rs  internal_merch_order_post.rs  internal_merch_order_post_paid_update.rs  internal_merch_special_price_delete.rs  internal_merch_special_price_list.rs  internal_merch_special_price_post.rs  internal_merch_special_price_put.rs
src/api/v1/rdp_go/: internal_rdp_go_clean.rs  internal_rdp_go_execute_script.rs
src/api/v1/storage/: api_storage_check_sums_find_chunk.rs  api_storage_chunk_check_sums.rs  api_storage_download.rs  api_storage_list.rs  api_storage_mkdir.rs  api_storage_move.rs  api_storage_read_at.rs  api_storage_remove.rs  api_storage_stat.rs  api_storage_truncate.rs  api_storage_upload.rs  api_storage_write_at.rs  download.rs  move.rs  remove.rs  upload.rs
src/api/v1/sync/: system_sync_batch_get_task.rs  system_sync_resume_task.rs  system_sync_retransmit_task.rs  system_sync_stop_task.rs  system_sync_update_task_state.rs
src/common/: client.rs  define.rs  request.rs  response.rs  sha1.rs  signer.rs
src/model/: file.rs  merch.rs  sync.rs
src/openapi/: client.rs  client_http.rs  config.rs  request.rs  request_builder.rs  signer.rs
src/utils/: sha1.rs
