[workspace]
resolver = "2"
members = [
    "examples/*",
    "openapi",
    "openapi-common",
    "openapi-isync",
    "openapi-macros",
    "openapi-model",
    "openapi-tool",
    "openapi-util",
]
exclude = []

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "open api for rust"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
dotenvy = "0.15.7"
serde_urlencoded = "0.7"
md-5 = "0.10"
sha1 = "0.10"
hex = "0.4"
lazy_static = "1.5.0"
