[package]
name = "openapi-rs"
version = "0.1.1"
edition = "2024"
description = "A Rust library for OpenAPI specification"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Linyuqiz/openapi-rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
dotenvy = "0.15.7"
serde_urlencoded = "0.7"
derive_more = { version = "1.0.0", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
bytes = "1"
regex = "1"
md-5 = "0.10"
sha1 = "0.10"
hex = "0.4"
