[package]
name = "openapi-macros"
version = { workspace = true }
edition = { workspace = true }
description = "Procedural macros for OpenAPI implementation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Linyuqiz/openapi-rs"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
