[package]
name = "openapi-rs"
version = { workspace = true }
edition = { workspace = true }
description = "A Rust library for OpenAPI specification"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Linyuqiz/openapi-rs"

[dependencies]
openapi-macros = { version = "0.1.0", path = "../openapi-macros" }
openapi-common = {version = "0.1.0", path = "../openapi-common" }
openapi-model = { version = "0.1.0",path = "../openapi-model" }

tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
derive_more = { workspace = true }
bytes = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
futures-util = { workspace = true }

[features]
default = []
