[package]
name = "zone-list"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
openapi-rs = { path = "../../openapi-rs" }
openapi-common = { path = "../../openapi-common" }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
